提交第一章翻译

--- a/ch01.md
+++ b/ch01.md
@@ -1,249 +1,145 @@
-# 1 Preface
+# 1 前言
 
-## 1.1 Multitasking in Small Embedded Systems
+## 1.1 小型嵌入式系统中的多任务处理
 
-### 1.1.1 About the FreeRTOS Kernel
+### 1.1.1 关于 FreeRTOS 内核
 
-FreeRTOS is a collection of C libraries comprised of a real-time kernel
-and a set of modular libraries that implement complementary
-functionality.
+FreeRTOS 是一个 C 库的集合，其中包含了一个实时内核和一些实现互补功能的模块化库。
 
-Richard Barry originally developed FreeRTOS around 2003. Real-Time
-Engineers Ltd, Richard's company, continued FreeRTOS development in
-close partnership with the world's leading chip companies until Amazon
-Web Services (AWS) took stewardship of FreeRTOS 2016. Richard now
-continues his work on FreeRTOS as a senior principal engineer within the
-AWS IoT team.  FreeRTOS is MIT licensed open source code, available for
-any purpose.  You don't have to be an AWS customer to benefit from AWS's
-stewardship!
+Richard Barry 最初在2003年左右开发了 FreeRTOS。Richard 的公司 Real-Time Engineers Ltd 与世界领先的芯片公司密切合作，继续进行 FreeRTOS 开发，直到亚马逊网络服务公司（AWS）接管了 FreeRTOS 2016。Richard 现在继续在 FreeRTOS 上工作，担任AWS物联网团队的高级首席工程师。FreeRTOS 是 MIT 许可的开源代码，可用于任何目的。您不必是AWS客户，也可以从AWS的管理中受益！
 
-The FreeRTOS kernel is ideally suited to deeply embedded real-time
-applications that run on microcontrollers or small microprocessors. This
-type of application typically includes a mix of both hard and soft
-real-time requirements.
+FreeRTOS 内核非常适合在微控制器或小型微处理器上运行的深度嵌入式实时应用程序。这种类型的应用程序通常包括硬实时和软实时需求的混合。
 
-Soft real-time requirements state a time deadline—but breaching the
-deadline would not render the system useless. For example, responding to
-keystrokes too slowly might make a system seem annoyingly unresponsive
-without actually making it unusable.
+软实时需求规定了一个截止时间，然而违反这个截止时间不会让系统不可用。比如，如果对于按键输入的响应太慢，可能会使系统看起来很卡顿，但不会使它不可用。
 
-Hard real-time requirements state a time deadline—and breaching the
-deadline would result in absolute failure of the system. For example, a
-driver's airbag has the potential to do more harm than good if it
-responded to crash sensor inputs too slowly.
+硬实时需求也规定了一个截止时间，并且违反这个截止时间会导致系统的绝对故障。比如，如果驾驶员的安全气囊如果对碰撞传感器的输入响应太慢，它可能会适得其反。
 
-The FreeRTOS kernel is a real-time kernel (or real-time scheduler) that
-enables applications built on FreeRTOS to meet their hard real-time
-requirements. It enables applications to be organized as a collection of
-independent threads of execution. For example, on a processor that has
-only one core, only a single thread of execution can execute at any
-one time. The kernel decides which thread to execute by examining the
-priority assigned to each thread by the application designer. In the
-simplest case, the application designer could assign higher priorities
-to threads that implement hard real-time requirements and lower
-priorities to threads that implement soft real-time requirements.
-Allocating priorities in that way would ensure hard real-time threads
-always execute ahead of soft real-time threads, but priority assignment
-decisions are not always that simplistic.
+FreeRTOS 内核是一个实时内核（或者说实时调度器），它使得基于 FreeRTOS 构建的应用程序能够满足它们的硬实时需求。应用程序会被组织成一个独立执行线程的集合。比如，在一颗只有一个核的处理器上，任何时候只能执行一个单线程。FreeRTOS 内核通过检查应用程序设计者为每个线程指定的优先级来决定执行哪个线程。在最简单的情况下，应用程序设计者可以给实现硬实时需求的线程指定高优先级，给实现软实时需求的线程指定低优先级。通过这种分配优先级的方式，可以确保硬实时线程总是先于软实时线程，但是优先级分配决策并不总是那么简单。
 
-Do not be concerned if you do not fully understand the concepts in the
-previous paragraph yet. The following chapters provide a detailed
-explanation, with many examples, to help you understand how to use a
-real-time kernel, and FreeRTOS in particular.
+如果您还没有完全理解上一段中的概念的话，也不用担心。接下来的章节通过许多实例提供了详细的解释，来帮助您理解如何使用一个实时内核，特别是 FreeRTOS。
 
 
-### 1.1.2 Value Proposition
+### 1.1.2 价值主张
 
-The unprecedented global success of the FreeRTOS kernel comes from its
-compelling value proposition; FreeRTOS is professionally developed,
-strictly quality controlled, robust, supported, does not contain any
-intellectual property ownership ambiguity, and is truly free to use in
-commercial applications without any requirement to expose your
-proprietary source code. Further, AWS's stewardship provides a global
-presence, expert security event response procedures, a large and diverse
-development team, expertise in formal verification, pen testing, memory
-safety proofs, and long-term
-support – all while maintaining FreeRTOS as a hardware, development
-tool, and cloud service-neutral open-source project. FreeRTOS
-development is transparent and community-driven in GitHub, and does not
-require any special tools or development practices.
+FreeRTOS 内核在全球范围内史无前例的成功，来源于它令人信服的价值主张；FreeRTOS 是专业开发的，严格的质量控制，健壮的，受支持的，不包含任何知识产权所有权歧义，并且可以在商业应用中完全免费使用，无需公开您的专有源码。此外，AWS的管理提供了全球影响力、专业安全事件响应程序、庞大而多样化的开发团队、形式验证、渗透测试、内存安全证明方面的专业知识和长期支持，同时将 FreeRTOS 作为硬件、开发工具和云服务中立的开源项目进行维护。FreeRTOS 的开发是透明的，在 GitHub 上由社区驱动，不需要任何特殊的工具或开发实践。
 
-You can take a product to market using FreeRTOS without even telling us,
-let alone paying any fees, and thousands of companies do just that. If
-at any time you would like to receive additional backup, or if your
-legal team requires additional written guarantees or indemnification,
-then our strategic partners provide simple low-cost commercial license
-options. Peace of mind comes with the knowledge that you can opt to take
-the commercial route whenever you choose.
+您甚至可以在不告知我们的情况下使用 FreeRTOS 将产品推向市场，更不用说支付任何费用，很多人都是这样做的。如果你希望获得额外的备份，或者您的法律团队需要额外的书面保证或补偿，我们的战略合作伙伴会为您提供简单且低成本的商业升级路径。请尽管放心，您随时都可选择走商业路线。
 
 
-### 1.1.3 A Note About Terminology
+### 1.1.3 关于术语的说明
 
-In FreeRTOS, each thread of execution is called a 'task'. There is no
-consensus on terminology within the embedded community, but I prefer
-'task' to 'thread,' as thread can have a more specific meaning in some
-fields of application.
+在 FreeRTOS 中，每个可执行线程被称为一个“任务”。嵌入式社区中关于这个术语并没有定论，但是比起“线程”，我更喜欢“任务”，因为线程在一些应用程序领域会有更具体的含义。
 
 
-### 1.1.4 Why Use an RTOS?
+### 1.1.4 为什么要使用 RTOS？
 
-There are many well-established techniques for writing good embedded
-software without using a multithreading kernel. If the system under
-development is simple, then these techniques might provide the most
-appropriate solution. Using a kernel would likely be preferable in more
-complex cases, but where the crossover point occurs will always be
-subjective.
+有许多成熟的技术可以在不使用多线程内核的情况下编写好的嵌入式软件。如果要开发的系统比较简单，那么这些技术可能是最合适的方案。在比较复杂的场景下，可能使用内核会更合适，但是临界点总是主观选择的。
 
-As already described, task prioritization can help ensure an application
-meets its processing deadlines, but a kernel can bring other less
-obvious benefits. Some of these are listed very briefly below.
+就像已经介绍过的，任务优先级可以确保一个应用程序满足它的处理截止时间，但是内核还可以带来其他不明显的好处。下面简要列出了其中一些。
 
-- Abstracting away timing information
+- 抽象出时间信息
 
-  The RTOS is responsible for execution timing and provides a time-related
-  API to the application. That allows the structure of the application
-  code to be more straightforward and the overall code size to be smaller.
+  RTOS 负责执行计时，并为应用程序提供与时间相关的 API。这使得应用程序代码的结构更加易懂，并且总代码量更小。
 
-- Maintainability/Extensibility
+- 可维护性/可扩展性
 
-  Abstracting away timing details results in fewer interdependencies
-  between modules and allows the software to evolve in a controlled and
-  predictable way. Also, the kernel is responsible for the timing, so
-  application performance is less susceptible to changes in the underlying
-  hardware.
+  抽象掉时间细节会减少模块之间的耦合，并且允许软件以可控的、可预测的方式发展。同样的，内核负责计时，因此应用程序性能不易受到底层硬件变化的影响。
 
-- Modularity
+- 模块化
 
-  Tasks are independent modules, each of which should have a well-defined
-  purpose.
+  任务是独立的模块，每个模块都应该有一个明确的目的。
 
-- Team development
+- 团队开发
 
-  Tasks should also have well-defined interfaces, allowing easier
-  team development.
+  任务还应该拥有明确定义的接口，以便更容易地进行团队开发。
 
-- Easier testing
+- 更容易测试
 
-  Tasks that are well-defined independent modules with clean interfaces
-  are easier to test in isolation.
+  拥有清晰接口的定义良好的独立模块的任务更容易单独测试。
 
-- Code reuse
+- 代码复用
 
-  Code designed with greater modularity and fewer interdependencies is
-  easier to reuse.
+  模块化程度更高、依赖性更低的代码更容易复用。
 
-- Improved efficiency
+- 提高效率
 
-  Application code that uses an RTOS can be completely event-driven. No
-  processing time needs to be wasted by polling for events that
-  have not occurred.
+  使用 RTOS 的应用程序代码可以完全被事件驱动。轮询的未发生的事件不需要浪费任何处理时间。
 
-  Countering the efficiency gained from being event driven is the need to process the RTOS tick
-  interrupt and switch execution from one task to another. However,
-  applications that don't use an RTOS normally include some form of tick
-  interrupt anyway.
+  事件驱动对于效率提升的影响，是需要处理 RTOS 的 tick 中断和任务切换。然而，不使用 RTOS 的应用程序通常都会包含某种形式的 tick 中断。
 
-- Idle time
+- 空闲时间
 
-  The automatically created Idle task executes when there are no
-  application tasks that require processing. The Idle task can measure
-  spare processing capacity, perform background checks, or place the
-  processor into a low-power mode.
+  自动创建的空闲任务会在没有应用程序任务需要处理时执行。空闲任务可以测量空闲处理能力，执行后台检查，或让处理器进入低功耗模式。
 
-- Power Management
+- 电源管理
 
-  The efficiency gains that result from using an RTOS allow the processor to
-  spend more time in a low power mode.
+  使用 RTOS 的效率提升允许处理器有更多的时间处于低功耗模式。
 
-  Power consumption can be decreased significantly by placing the
-  processor into a low power state each time the Idle task runs. FreeRTOS
-  also has a special tick-less mode. Using the tick-less mode allows the
-  processor to enter a lower power mode than would otherwise be possible
-  and remain in the low power mode for longer.
+  通过每次空闲任务运行时将处理器置为低功耗状态，可以显著降低功耗。FreeRTOS 也有一个特殊的 tick-less 模式。使用 tick-less 模式允许处理器进入一种比其他方式更低的功耗模式，并且在低功耗模式下维持更长时间。
 
-- Flexible interrupt handling
+- 灵活的中断处理
 
-  Interrupt handlers can be kept very short by deferring processing to
-  either a task created by the application writer or the automatically
-  created RTOS daemon task (also known as the timer task).
+  通过将处理推迟到应用程序作者创建的任务，或自动创建的 RTOS 守护进程任务（也被称为计时器任务），可以使中断处理程序保持非常短的时间。
 
-- Mixed processing requirements
+- 混合处理需求
 
-  Simple design patterns can achieve a mix of periodic, continuous, and
-  event-driven processing within an application. In addition, hard and
-  soft real-time requirements can be met by selecting appropriate task and
-  interrupt priorities.
+  简单设计的模式在应用程序中实现周期性、持续性和事件驱动处理的混合。另外，通过选择合适的任务和中断优先级，可以满足硬实时和软实时需求。
 
 
-### 1.1.5 FreeRTOS Kernel Features
+### 1.1.5 FreeRTOS 内核特性
 
-The FreeRTOS kernel has the following standard features:
+FreeRTOS 内核拥有以下标准特性：
 
-- Pre-emptive or co-operative operation
-- Optional time-slicing
-- Very flexible task priority assignment
-- Flexible, fast and light-weight task notification mechanisms
-- Queues
-- Binary semaphores
-- Counting semaphores
-- Mutexes
-- Recursive mutexes
-- Software timers
-- Event groups
-- Stream buffers
+- 抢占式和非抢占式
+- 可配置的时间片调度
+- 非常灵活的任务优先级分配
+- 灵活、快速且轻量的任务通知机制
+- 队列
+- 二进制信号量
+- 计数信号量
+- 互斥量
+- 递归互斥量
+- 软定时器
+- 事件组
+- 流缓存
+- 消息缓存
 - Message buffers
-- Co-routines (deprecated)
-- Tick hook functions
-- Idle hook functions
-- Stack overflow checking
-- Trace macros
-- Task run-time statistics gathering
-- Optional commercial licensing and support
-- Full interrupt nesting model (for some architectures)
-- A tick-less capability for extreme low power applications (for some architectures)
-- Memory Protection Unit support for isolating tasks and increasing application safety (for some architectures)
-- Software managed interrupt stack when appropriate (this can help save RAM)
-- The ability to create RTOS objects using either statically or
-  dynamically allocated memory
+- 协程 (过时)
+- Tick 回调函数
+- 空闲回调函数
+- 栈溢出检查
+- 跟踪宏
+- 任务运行时统计
+- 可选的商业许可和支持
+- 完全中断嵌套模型（适用于部分架构）
+- 用于极端低功耗应用的 tick-less 能力（适用于部分架构）
+- 用于隔离任务和增强应用程序安全性的内存保护组件（适用于部分架构）
+- 适当的软件管理中断堆栈（可以节省内存）
+- 使用静态或动态分配内存创建的 RTOS 对象的能力
 
 
-### 1.1.6 Licensing, and The FreeRTOS, OpenRTOS, and SafeRTOS Family
+### 1.1.6 许可以及 FreeRTOS，OpenRTOS 和 SafeRTOS 家族
 
-The **FreeRTOS** MIT open source license is designed to ensure:
+**FreeRTOS** MIT 开源协议旨在保障：
 
-- FreeRTOS can be used in commercial applications.
+- FreeRTOS 可用于商业应用程序。
 
-- FreeRTOS itself remains freely available to everybody.
+- FreeRTOS 本身仍对任何人免费开放。
 
-- FreeRTOS users retain ownership of their intellectual property.
+- FreeRTOS 用户保留其知识产权的所有权。
 
-See <https://www.FreeRTOS.org/license> for the latest open source
-license information.
+查看 <https://www.FreeRTOS.org/license> 以获得最新的开源协议许可信息。
 
-**OpenRTOS** is a commercially licensed version of FreeRTOS provided
-under license from Amazon Web Services by a third party.
+**OpenRTOS** 是第三方根据亚马逊网络服务的许可提供的 FreeRTOS 的商业许可版本。
 
-**SafeRTOS** shares the same usage model as FreeRTOS, but has been
-developed in accordance with the practices, procedures, and processes
-necessary to claim compliance with various internationally recognized
-safety related standards.
+**SafeRTOS** 与 FreeRTOS 具有相同的使用模型，但是是根据符合各种国际公认的安全相关标准所必需的实践、程序和流程进行开发的。
 
 
-## 1.2 Included Source Files and Projects
+## 1.2 包含的源文件和项目
 
-### 1.2.1 Obtaining the Examples that Accompany this Book
+### 1.2.1 获取随附本书的示例
 
-The zip file available for download from <https://www.FreeRTOS.org/Documentation/code>
-contains all the source code, pre-configured project files, and
-instructions necessary to build and execute the examples presented in
-this book. Note the zip file will not necessarily contain the most
-recent version of FreeRTOS.
+本书中提供的所有示例的源代码，预配置项目文件和完整构建说明都包含在从 <https://www.FreeRTOS.org/Documentation/code> 下载的 zip 文件中。请注意，zip 文件可能不包含最新版本的 FreeRTOS。
 
-The screenshots included in this book show the examples executing in a
-Microsoft Windows environment, using the FreeRTOS Windows port. The
-project that uses the FreeRTOS Windows port is pre-configured to build
-using the free Community edition of Visual Studio, available from
-<https://www.visualstudio.com/>. Note that while the FreeRTOS Windows
-port provides a convenient evaluation, test, and development platform,
-it does *not* provide true real-time behavior.
+本书中包含的屏幕截图是在使用 FreeRTOS Windows 移植版在 Microsoft Windows 环境中执行示例时截取的。使用 FreeRTOS Windows 移植版的项目已预先配置为使用 Visual Studio 的免费社区版本进行构建， 可以从 <https://www.visualstudio.com/> 下载。 请注意，虽然 FreeRTOS Windows 移植版提供了一个方便的评估、测试和开发平台，但它并*不能*提供真正的实时行为。
 
